# Backtesting-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
bindings/: bindings.cpp
data/: AAPL_2020-01-01_2020-12-31.csv  AAPL_2020-01-01_2022-01-01_1d.csv  TSLA_2020-01-01_2022-01-01_1d.csv
include/engine/: Engine.hpp  MarketDataBar.hpp  MarketDataFeed.hpp  Order.hpp  OrderManager.hpp  OrderType.hpp  Portfolio.hpp  Strategy.hpp
python/: DataCollection.py  main.py  user.py
src/engine/: Engine.cpp  MarketDataFeed.cpp  OrderManager.cpp  Portfolio.cpp  Strategy.cpp
